Fix HTML structure and update title in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>Basic Web Chess</h1>
+    <h1>Chess Game</h1>
 
     <div id="mode-selection">
         <button id="pass-play-btn">Pass and Play with Friends</button>
@@ -27,4 +27,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
